--- a/examples/VAE-quadratic.ipynb
+++ b/examples/VAE-quadratic.ipynb
@@ -49,7 +49,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "obs_dim = 2\n",
@@ -72,7 +74,13 @@
     ")\n",
     "decoder = beer.models.GaussianMLP(dec_struct, 40, obs_dim)\n",
     "\n",
-    "latent_model = beer.models.NaturalIsotropicGaussian(latent_dim)\n",
+    "#latent_model = beer.models.NaturalIsotropicGaussian(latent_dim)\n",
+    "#latent_model = beer.models.NormalDiagonalCovariance.create(\n",
+    "#    latent_dim,\n",
+    "#    mean_prec=1e1,\n",
+    "#    prec_shape=1,\n",
+    "#    prec_rate=1.\n",
+    "#)\n",
     "\n",
     "model = beer.models.VAE(encoder, decoder, latent_model, nb_samples)"
    ]
@@ -95,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "beer.inference.run_training(data, model, optimizer, 5000, history, batch_size=20, lrate_latent_model=1e-1)"
+    "beer.inference.run_training(data, model, optimizer, 2000, history, batch_size=20, lrate_latent_model=0.)"
    ]
   },
   {
