GSM for the Normal distribution working.

--- a/examples/GSM_example1.ipynb
+++ b/examples/GSM_example1.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Structured Variational AutoEncoder\n",
+    "# Generalized Subspace Model: Normal distribution\n",
     "\n",
-    "This notebook illustrate how to build and train a Structured Variational AutoEncoder (SVAE) with the [beer framework](https://github.com/beer-asr/beer)."
+    "This notebook illustrates how to build and train a Bayesian Generalized Subspace Model for a Normal distribution with the [beer framework](https://github.com/beer-asr/beer). "
    ]
   },
   {
@@ -15,45 +15,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "\n",
-    "# Add the path of the beer source code ot the PYTHONPATH.\n",
+    "# Add \"beer\" to the PYTHONPATH\n",
     "import sys\n",
     "sys.path.append('../')\n",
     "\n",
+    "import beer\n",
     "import numpy as np\n",
+    "import torch\n",
+    "from torch.autograd import Variable\n",
     "\n",
     "# For plotting.\n",
     "from bokeh.io import show, output_notebook\n",
     "from bokeh.plotting import figure, gridplot\n",
-    "from bokeh.models import LinearAxis, Range1d\n",
-    "\n",
-    "# Beer framework\n",
-    "import beer\n",
+    "from bokeh.models import Range1d, LinearAxis\n",
+    "output_notebook()\n",
     "\n",
     "# Convenience functions for plotting.\n",
     "import plotting\n",
     "\n",
-    "output_notebook(verbose=False)"
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data \n",
+    "## Data\n",
     "\n",
-    "As a simple example we consider the following synthetic data: \n",
+    "The \"data\" is actually a Normal distribution whose parameters lie in a (non-linear) subspace. For our synthetic example it is defined as:\n",
     "\n",
-    "$$ \n",
+    "$$\n",
     "\\begin{split}\n",
-    "    z &\\sim \\mathcal{N}(m, \\Sigma) \\\\\n",
-    "    x &= \n",
+    "    x & \\sim \\mathcal{N}(0, I) \\\\\n",
+    "    \\mu &= \n",
     "        \\begin{pmatrix}\n",
-    "        z_1 \\\\\n",
-    "        z_2 + (z_1 - m_1)^2\n",
-    "        \\end{pmatrix} \n",
+    "            x \\\\\n",
+    "            1 - \\ln \\big( 1 + e^{-x} \\big)\n",
+    "        \\end{pmatrix} \\\\\n",
+    "    \\Sigma &= \n",
+    "        \\begin{pmatrix}\n",
+    "            1 & 0 \\\\\n",
+    "            0 & 1 + e^{-\\frac{x}{2}}\n",
+    "        \\end{pmatrix}\n",
     "\\end{split}\n",
     "$$"
    ]
@@ -61,33 +65,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Generate some Normal distributed samples.\n",
-    "mean = np.array([3., 2.])\n",
-    "cov = np.array([[2., 1.], [1., .75]])\n",
-    "Z = np.random.multivariate_normal(mean, cov, size=100)\n",
+    "def normal_from_subspace(x):\n",
+    "    mean = np.array([x, 1 - np.log(1 + np.exp(-x))])\n",
+    "    cov = np.array([\n",
+    "        [1., 0.],\n",
+    "        [0., (1 + np.exp(-.5 * x))]\n",
+    "    ])\n",
+    "    return mean, cov \n",
     "\n",
-    "# Apply the non-linear transformation.\n",
-    "X = np.zeros_like(Z)\n",
-    "X[:, 0] = Z[:, 0]\n",
-    "X[:, 1] = Z[:, 1] + (Z[:, 0]-mean[0])**2\n",
+    "xs = np.sqrt(10) * np.random.randn(100) + 1.5\n",
+    "dists = [normal_from_subspace(x) for x in xs]\n",
     "\n",
-    "fig = figure(title='Synthetic data', width=400, height=400)\n",
-    "fig.circle(X[:, 0], X[:, 1])\n",
+    "fig = figure(\n",
+    "    title='Data',\n",
+    "    width=400,\n",
+    "    height=400,\n",
+    "    x_range=(-10, 10),\n",
+    "    y_range=(-10, 10)\n",
+    ")\n",
+    "\n",
+    "for dist in dists:\n",
+    "    plotting.plot_normal(fig, dist[0], dist[1], alpha=.1)\n",
+    "    \n",
     "show(fig)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Features normalization\n",
-    "\n",
-    "Since the VAE model is built upon neural network components, it is a good practice to mean-variance normalize the features to ease up the training."
    ]
   },
   {
@@ -98,10 +101,9 @@
    },
    "outputs": [],
    "source": [
-    "data_mean = X.mean(axis=0)\n",
-    "data_cov = np.cov(X.T)\n",
-    "X -= data_mean\n",
-    "X /= np.sqrt(np.diag(data_cov))"
+    "data = np.vstack([\n",
+    "    np.hstack([-.5 * 1. / np.diag(dist[1]), 1 / np.diag(dist[1]) * dist[0]]) for dist in dists\n",
+    "])"
    ]
   },
   {
@@ -110,7 +112,7 @@
    "source": [
     "## Model Creation\n",
     "\n",
-    "We first create the SVAE."
+    "We create two types of Normal distribution: one diagonal covariance matrix and another one with full covariance matrix."
    ]
   },
   {
@@ -122,7 +124,7 @@
    "outputs": [],
    "source": [
     "# Dimension of the observed space.\n",
-    "obs_dim = X.shape[1]\n",
+    "obs_dim = 4\n",
     "\n",
     "# Dimension of the latent space. It can be bigger or smaller\n",
     "# than the dimension of the observed space.\n",
@@ -145,7 +147,7 @@
     "    nn.Linear(n_units, n_units),\n",
     "    nn.Tanh()\n",
     ")\n",
-    "encoder = beer.models.MLPNormalIso(enc_struct, latent_dim, residual=True)\n",
+    "encoder = beer.models.MLPNormalDiag(enc_struct, latent_dim, residual=True)\n",
     "\n",
     "# Neural network structure of the decoder of the model.\n",
     "dec_struct = nn.Sequential(\n",
@@ -154,15 +156,14 @@
     "    nn.Linear(n_units, n_units),\n",
     "    nn.Tanh()\n",
     ")\n",
-    "decoder = beer.models.MLPNormalDiag(dec_struct, obs_dim)\n",
+    "decoder = beer.models.MLPNormalGamma(dec_struct, obs_dim, prior_count=1)\n",
     "\n",
     "# Model of the latent space (uncomment the one you want to try).\n",
     "# It can be changed at any-time. \n",
     "# ----------------------------------------------------------------------\n",
-    "\n",
     "latent_model = beer.models.NormalDiagonalCovariance.create(latent_dim)\n",
     "\n",
-    "#latent_model = beer.models.NormalFullCovariance.create(latent_dim, prior_count=1)\n",
+    "#latent_model = beer.models.NormalFullCovariance.create(latent_dim, prior_count=1e-3)\n",
     "\n",
     "#args = {'dim':2, 'prior_count':1, 'mean': data_mean, 'cov': data_cov, 'random_init':True}\n",
     "#latent_model = beer.Mixture.create(10, beer.NormalDiagonalCovariance.create, args, prior_count=1e-6)\n",
@@ -180,35 +181,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Variational Bayes Inference is sensitive to the initialization of the posterior. Our initialization scheme is fairly basic but seems to provide good results on this toy example:\n",
-    "  1. Keep the prior fixed and optimize the expected value of the  log-likelihood of the VAE (i.e. loss function without the KL divergence term).\n",
-    "  2. Freeze the parameters of the encoder/decoder and update the latent model so it fits the current distribution of the latent space."
+    "Initialization of the model."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "scrolled": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "svae.fit(X, max_epochs=500, lrate=1e-3, latent_model_lrate=0, kl_weight=0.0, callback=None)\n",
-    "svae.fit(X, max_epochs=500, lrate=0, latent_model_lrate=1e-1, kl_weight=0.0, callback=None)"
+    "svae.fit(data, max_epochs=500, lrate=1e-3, latent_model_lrate=0, kl_weight=0.0, callback=None)\n",
+    "svae.fit(data, max_epochs=500, lrate=0, latent_model_lrate=1e-1, kl_weight=0.0, callback=None)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Variational Bayes Training"
+    "## Variational Bayes Training "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Callback to monitor the training progress.\n",
@@ -216,10 +216,10 @@
     "def callback(elbo, llh, kld):\n",
     "    elbos.append(elbo)\n",
     "    llhs.append(llh)\n",
-    "    klds.append(kld)\\\n",
+    "    klds.append(kld)\n",
     "\n",
     "# This is the training.\n",
-    "svae.fit(X, max_epochs=10000, lrate=1e-3, latent_model_lrate=1e-2, callback=callback)\n",
+    "svae.fit(data, max_epochs=5000, lrate=1e-3, latent_model_lrate=1e-2, callback=callback)\n",
     "\n",
     "# Plot the ELBO.\n",
     "fig1 = figure(title='ELBO', width=400, height=400, x_axis_label='step',\n",
@@ -242,41 +242,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's see what the VAE has learnt."
+    "To see what the model has learned, we sample \"embeddings\" from the prior distribution and transform them with decoder of the VAE."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "d = 100\n",
-    "x_range = (-3, 3)\n",
-    "y_range = (-3, 3)\n",
-    "xy = np.mgrid[x_range[0]:x_range[1]:100j, y_range[0]:y_range[1]:100j].reshape(2,-1).T\n",
-    "elbo, llh, kld, mean, var = svae.evaluate(xy, sampling=False)\n",
-    "fig1 = figure(x_range=x_range,  y_range=y_range, width=400, height=400)\n",
+    "# Observed space\n",
+    "fig1 = figure(x_range=(-10, 10), y_range=(-10, 10), width=400, height=400)\n",
+    "eps = Variable(torch.from_numpy(np.random.multivariate_normal(svae.latent_model.mean, svae.latent_model.cov, 100)).float())\n",
+    "decoder_state = svae.decoder(eps)\n",
+    "for prior in decoder_state.as_priors():\n",
+    "    normal = beer.NormalDiagonalCovariance(prior, prior)\n",
+    "    plotting.plot_normal(fig1, normal.mean, normal.cov, alpha=.1)\n",
     "\n",
-    "# must give a vector of image data for image parameter\n",
-    "fig1.image(image=[np.exp((elbo).reshape(d, d).T)], \n",
-    "           x=x_range[0], y=y_range[0], \n",
-    "           dw=(x_range[1] - x_range[0]), dh=(y_range[1] - y_range[0]),\n",
-    "           palette=\"Inferno256\", alpha=.01)\n",
-    "fig1.circle(X[:, 0], X[:, 1], alpha=1)\n",
-    "\n",
-    "fig2 = figure(width=400, height=400)\n",
-    "\n",
-    "elbo, llh, kld, mean, var = svae.evaluate(X[:100], sampling=False)\n",
-    "fig2.cross(mean[:, 0], mean[:, 1], color='black')\n",
-    "for m, v in zip(mean, var):\n",
-    "    fig2.ellipse(x=m[0], y=m[1], \n",
-    "                 width=2 * np.sqrt(v[0]), \n",
-    "                 height=2 * np.sqrt(v[1]), \n",
-    "                 fill_alpha=0, color='black') \n",
-    "plotting.plot_latent_model(fig2, svae.latent_model, alpha=.5, color='salmon')\n",
+    "# Latent Space.\n",
+    "fig2 = figure(x_range=(-10, 10), y_range=(-10, 10), width=400, height=400)\n",
+    "embeddings = eps.data.numpy()\n",
+    "plotting.plot_latent_model(fig2, svae.latent_model, color='salmon')\n",
+    "fig2.cross(embeddings[:, 0], embeddings[:, 1], color='black')\n",
     "\n",
     "grid = gridplot([[fig1, fig2]])\n",
     "show(grid)  "
