--- a/examples/GSM_example2.ipynb
+++ b/examples/GSM_example2.ipynb
@@ -138,7 +138,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def natural_params_normal(mean, diag_prec):\n",
@@ -184,7 +186,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Dimension of the observed space.\n",
@@ -251,11 +255,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "svae.fit(data, max_epochs=500, lrate=1e-3, latent_model_lrate=0, kl_weight=0.0, callback=None)\n",
-    "svae.fit(data, max_epochs=500, lrate=0, latent_model_lrate=1e-1, kl_weight=0.0, callback=None)"
+    "beer.training.train_vae(svae, data, max_epochs=500, lrate=1e-3, latent_model_lrate=0, kl_weight=0.0, callback=None)\n",
+    "beer.training.train_vae(svae, data, max_epochs=500, lrate=0, latent_model_lrate=1e-1, kl_weight=0.0, callback=None)"
    ]
   },
   {
@@ -281,7 +287,7 @@
     "    klds.append(kld)\n",
     "\n",
     "# This is the training.\n",
-    "svae.fit(data, max_epochs=5000, lrate=1e-3, latent_model_lrate=1e-2, callback=callback)\n",
+    "beer.training.train_vae(svae, data, max_epochs=5000, lrate=1e-3, latent_model_lrate=1e-2, callback=callback)\n",
     "\n",
     "# Plot the ELBO.\n",
     "elbos = elbos[1:]\n",
@@ -350,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
