--- a/examples/SVAE.ipynb
+++ b/examples/SVAE.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "source": [
     "# Structured Variational AutoEncoder\n",
     "\n",
@@ -93,7 +95,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data_mean = X.mean(axis=0)\n",
@@ -114,7 +118,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Dimension of the observed space.\n",
@@ -185,12 +191,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "svae.fit(X, max_epochs=500, lrate=1e-3, latent_model_lrate=0, kl_weight=0.0, callback=None)\n",
-    "svae.fit(X, max_epochs=500, lrate=0, latent_model_lrate=1e-1, kl_weight=0.0, callback=None)"
+    "beer.training.train_vae(svae, X, max_epochs=500, lrate=1e-3, latent_model_lrate=0, kl_weight=0.0, callback=None)\n",
+    "beer.training.train_vae(svae,X, max_epochs=500, lrate=0, latent_model_lrate=1e-1, kl_weight=0.0, callback=None)"
    ]
   },
   {
@@ -214,7 +221,7 @@
     "    klds.append(kld)\\\n",
     "\n",
     "# This is the training.\n",
-    "svae.fit(X, max_epochs=5000, lrate=1e-3, latent_model_lrate=1e-2, callback=callback)\n",
+    "beer.training.train_vae(svae,X, max_epochs=5000, lrate=1e-3, latent_model_lrate=1e-2, callback=callback)\n",
     "\n",
     "# Plot the ELBO.\n",
     "fig1 = figure(title='ELBO', width=400, height=400, x_axis_label='step',\n",
@@ -276,6 +283,15 @@
     "grid = gridplot([[fig1, fig2]])\n",
     "show(grid)  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -294,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
