make beer.training.train_{vae,conj_exp} import as beer.*

--- a/examples/GSM_example2.ipynb
+++ b/examples/GSM_example2.ipynb
@@ -260,8 +260,8 @@
    },
    "outputs": [],
    "source": [
-    "beer.training.train_vae(svae, data, max_epochs=500, lrate=1e-3, latent_model_lrate=0, kl_weight=0.0, callback=None)\n",
-    "beer.training.train_vae(svae, data, max_epochs=500, lrate=0, latent_model_lrate=1e-1, kl_weight=0.0, callback=None)"
+    "beer.train_vae(svae, data, max_epochs=500, lrate=1e-3, latent_model_lrate=0, kl_weight=0.0, callback=None)\n",
+    "beer.train_vae(svae, data, max_epochs=500, lrate=0, latent_model_lrate=1e-1, kl_weight=0.0, callback=None)"
    ]
   },
   {
@@ -287,7 +287,7 @@
     "    klds.append(kld)\n",
     "\n",
     "# This is the training.\n",
-    "beer.training.train_vae(svae, data, max_epochs=5000, lrate=1e-3, latent_model_lrate=1e-2, callback=callback)\n",
+    "beer.train_vae(svae, data, max_epochs=5000, lrate=1e-3, latent_model_lrate=1e-2, callback=callback)\n",
     "\n",
     "# Plot the ELBO.\n",
     "elbos = elbos[1:]\n",
