--- a/examples/Nested Mixture Model.ipynb
+++ b/examples/Nested Mixture Model.ipynb
@@ -147,7 +147,7 @@
     "    klds.append(kld)\n",
     "\n",
     "# Train the GMM with diagonal cov. matrix components.\n",
-    "beer.training.train_conj_exp(gmm_diag, data, max_epochs=200, callback=callback)\n",
+    "beer.train_conj_exp(gmm_diag, data, max_epochs=200, callback=callback)\n",
     "elbos_diag = copy.deepcopy(elbos[1:])\n",
     "llhs_diag =  copy.deepcopy(llhs[1:])\n",
     "klds_diag = copy.deepcopy(klds[1:])\n",
@@ -156,7 +156,7 @@
     "elbos, llhs, klds = [], [], []\n",
     "\n",
     "# Train the GMM with full cov. matrix components.\n",
-    "beer.training.train_conj_exp(gmm_full, data, max_epochs=200, callback=callback)\n",
+    "beer.train_conj_exp(gmm_full, data, max_epochs=200, callback=callback)\n",
     "elbos_full = copy.deepcopy(elbos[1:])\n",
     "llhs_full =  copy.deepcopy(llhs[1:])\n",
     "klds_full = copy.deepcopy(klds[1:])\n",
