--- a/examples/Mixture Model.ipynb
+++ b/examples/Mixture Model.ipynb
@@ -138,7 +138,7 @@
     "    klds.append(kld)\n",
     "\n",
     "# Train the GMM with diagonal cov. matrix components.\n",
-    "beer.train_conj_exp(gmm_diag, data, max_epochs=200, callback=callback)\n",
+    "beer.train_loglinear_model(gmm_diag, data, max_epochs=200, callback=callback)\n",
     "elbos_diag = copy.deepcopy(elbos[1:])\n",
     "llhs_diag =  copy.deepcopy(llhs[1:])\n",
     "klds_diag = copy.deepcopy(klds[1:])\n",
@@ -147,7 +147,7 @@
     "elbos, llhs, klds = [], [], []\n",
     "\n",
     "# Train the GMM with full cov. matrix components.\n",
-    "beer.train_conj_exp(gmm_full, data, max_epochs=200, callback=callback)\n",
+    "beer.train_loglinear_model(gmm_full, data, max_epochs=200, callback=callback)\n",
     "elbos_full = copy.deepcopy(elbos[1:])\n",
     "llhs_full =  copy.deepcopy(llhs[1:])\n",
     "klds_full = copy.deepcopy(klds[1:])\n",
@@ -252,7 +252,7 @@
     "    elbos = []\n",
     "    def callback(elbo, llh, kld):\n",
     "        elbos.append(elbo)\n",
-    "    beer.train_conj_exp(gmm_full, data, max_epochs=200, callback=callback)\n",
+    "    beer.train_loglinear_model(gmm_full, data, max_epochs=200, callback=callback)\n",
     "    elbos_vb.append(elbos[-1])\n",
     "    \n",
     "# New we run 10 times the split VB training.\n",
@@ -265,12 +265,12 @@
     "        \n",
     "    args = {'dim':2, 'mean':p_mean, 'cov': p_cov, 'prior_count':1, 'random_init':False}\n",
     "    gmm_full_split = beer.Mixture.create(1, beer.NormalFullCovariance.create, args, prior_count=1e-6)\n",
-    "    beer.train_conj_exp(gmm_full_split, data, max_epochs=100)\n",
+    "    beer.train_loglinear_model(gmm_full_split, data, max_epochs=100)\n",
     "\n",
     "    for k in range(2):\n",
     "        gmm_full_split = gmm_full_split.split()\n",
-    "        beer.train_conj_exp(gmm_full_split, data, max_epochs=100, callback=callback)\n",
-    "    beer.train_conj_exp(gmm_full_split, data, max_epochs=1000, callback=callback)\n",
+    "        beer.train_loglinear_model(gmm_full_split, data, max_epochs=100, callback=callback)\n",
+    "    beer.train_loglinear_model(gmm_full_split, data, max_epochs=1000, callback=callback)\n",
     "    elbos_split_vb.append(final_elbo)\n",
     "        \n",
     "        "
