--- a/examples/Normal.ipynb
+++ b/examples/Normal.ipynb
@@ -106,8 +106,8 @@
    "outputs": [],
    "source": [
     "# Training.\n",
-    "beer.training.train_conj_exp(normal_diag, data)\n",
-    "beer.training.train_conj_exp(normal_full, data)\n",
+    "beer.train_loglinear_model(normal_diag, data)\n",
+    "beer.train_loglinear_model(normal_full, data)\n",
     "\n",
     "fig = figure(\n",
     "    title='Initial model',\n",
@@ -175,9 +175,9 @@
     "\n",
     "    # Fit both models\n",
     "    normal_diag = beer.NormalDiagonalCovariance.create(dim=2, prior_count=1e-6)\n",
-    "    beer.training.train_conj_exp(normal_diag, X)\n",
+    "    beer.train_loglinear_model(normal_diag, X)\n",
     "    normal = beer.NormalFullCovariance.create(dim=2, mean=mean, prior_count=1e-6)\n",
-    "    beer.training.train_conj_exp(normal, X)\n",
+    "    beer.train_loglinear_model(normal, X)\n",
     "    \n",
     "    # Compute the log Bayes factor.\n",
     "    llh_M1 = normal.posterior.lognorm() - normal.prior.lognorm()\n",
@@ -195,24 +195,6 @@
     "\n",
     "show(fig1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
