Mixture model working again.

--- a/examples/Normal.ipynb
+++ b/examples/Normal.ipynb
@@ -109,7 +109,7 @@
    "outputs": [],
    "source": [
     "epochs = 1\n",
-    "lrate = 1.\n",
+    "lrate = 1\n",
     "X = torch.from_numpy(data).float()\n",
     "loss_fn = beer.StochasticVariationalBayesLoss(len(X))\n",
     "params = normal_diag.parameters + normal_full.parameters\n",
