mini training loop

--- a/examples/VAE.ipynb
+++ b/examples/VAE.ipynb
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {
     "scrolled": false
    },
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,12 +501,294 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
     "from torch.autograd import Variable\n",
-    "X = Variable(torch.from_numpy(data).float())"
+    "X = Variable(torch.from_numpy(data).float())\n",
+    "optim = torch.optim.SGD(vae.parameters(), lr=1e-5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/karel/miniconda3/envs/beer/lib/python3.6/site-packages/ipykernel_launcher.py:5: UserWarning: invalid index of a 0-dim tensor. This will be an error in PyTorch 0.5. Use tensor.item() to convert a 0-dim tensor to a Python number\n",
+      "  \"\"\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3067.921875\n",
+      "2992.719970703125\n",
+      "2921.056640625\n",
+      "2835.119873046875\n",
+      "2758.320068359375\n",
+      "2722.119384765625\n",
+      "2639.09521484375\n",
+      "2577.923095703125\n",
+      "2507.704345703125\n",
+      "2464.215087890625\n",
+      "2427.828125\n",
+      "2350.64111328125\n",
+      "2320.641357421875\n",
+      "2260.833251953125\n",
+      "2222.712646484375\n",
+      "2174.53125\n",
+      "2161.711669921875\n",
+      "2109.1875\n",
+      "2083.873046875\n",
+      "2047.6510009765625\n",
+      "2012.872802734375\n",
+      "1979.0928955078125\n",
+      "1943.2203369140625\n",
+      "1929.2747802734375\n",
+      "1898.5574951171875\n",
+      "1865.0576171875\n",
+      "1854.3157958984375\n",
+      "1823.915771484375\n",
+      "1797.344482421875\n",
+      "1773.507568359375\n",
+      "1754.2939453125\n",
+      "1724.2691650390625\n",
+      "1715.0909423828125\n",
+      "1685.913330078125\n",
+      "1674.0372314453125\n",
+      "1654.062744140625\n",
+      "1648.1229248046875\n",
+      "1625.114990234375\n",
+      "1621.8890380859375\n",
+      "1607.5047607421875\n",
+      "1595.3812255859375\n",
+      "1569.401123046875\n",
+      "1558.9300537109375\n",
+      "1542.1988525390625\n",
+      "1540.849609375\n",
+      "1521.0555419921875\n",
+      "1513.89990234375\n",
+      "1508.2979736328125\n",
+      "1486.685302734375\n",
+      "1472.105712890625\n",
+      "1467.6678466796875\n",
+      "1456.32958984375\n",
+      "1452.791259765625\n",
+      "1443.2662353515625\n",
+      "1429.590576171875\n",
+      "1419.5828857421875\n",
+      "1406.935302734375\n",
+      "1404.832275390625\n",
+      "1410.8726806640625\n",
+      "1402.151123046875\n",
+      "1378.1162109375\n",
+      "1374.114501953125\n",
+      "1373.0943603515625\n",
+      "1367.923095703125\n",
+      "1368.091552734375\n",
+      "1355.7440185546875\n",
+      "1355.3529052734375\n",
+      "1344.966552734375\n",
+      "1337.8997802734375\n",
+      "1335.8978271484375\n",
+      "1322.8641357421875\n",
+      "1333.4248046875\n",
+      "1319.9974365234375\n",
+      "1318.4688720703125\n",
+      "1311.992431640625\n",
+      "1307.8760986328125\n",
+      "1303.4029541015625\n",
+      "1301.8441162109375\n",
+      "1296.245361328125\n",
+      "1290.9769287109375\n",
+      "1286.815185546875\n",
+      "1282.025390625\n",
+      "1283.654052734375\n",
+      "1275.8350830078125\n",
+      "1273.0330810546875\n",
+      "1271.0595703125\n",
+      "1267.8516845703125\n",
+      "1269.9541015625\n",
+      "1266.2928466796875\n",
+      "1257.7259521484375\n",
+      "1258.3714599609375\n",
+      "1257.0780029296875\n",
+      "1254.8385009765625\n",
+      "1250.51220703125\n",
+      "1248.4132080078125\n",
+      "1246.894287109375\n",
+      "1241.9898681640625\n",
+      "1240.3458251953125\n",
+      "1230.493408203125\n",
+      "1237.7906494140625\n",
+      "1232.7578125\n",
+      "1227.7509765625\n",
+      "1227.8099365234375\n",
+      "1223.859375\n",
+      "1221.595458984375\n",
+      "1220.553955078125\n",
+      "1221.4442138671875\n",
+      "1210.2894287109375\n",
+      "1213.4566650390625\n",
+      "1212.81982421875\n",
+      "1208.4908447265625\n",
+      "1213.30078125\n",
+      "1209.6055908203125\n",
+      "1206.959716796875\n",
+      "1211.4793701171875\n",
+      "1207.5277099609375\n",
+      "1206.8800048828125\n",
+      "1197.2193603515625\n",
+      "1199.4573974609375\n",
+      "1192.2088623046875\n",
+      "1189.904541015625\n",
+      "1190.7298583984375\n",
+      "1190.9947509765625\n",
+      "1195.5460205078125\n",
+      "1189.7447509765625\n",
+      "1186.037109375\n",
+      "1191.0794677734375\n",
+      "1184.03515625\n",
+      "1180.38330078125\n",
+      "1188.735595703125\n",
+      "1181.1351318359375\n",
+      "1180.29248046875\n",
+      "1176.28076171875\n",
+      "1182.9600830078125\n",
+      "1172.018798828125\n",
+      "1176.2977294921875\n",
+      "1168.9937744140625\n",
+      "1177.561279296875\n",
+      "1173.2408447265625\n",
+      "1172.2296142578125\n",
+      "1173.801025390625\n",
+      "1170.252197265625\n",
+      "1173.099609375\n",
+      "1166.5565185546875\n",
+      "1161.785888671875\n",
+      "1163.3204345703125\n",
+      "1168.7545166015625\n",
+      "1158.6051025390625\n",
+      "1163.5631103515625\n",
+      "1157.13720703125\n",
+      "1158.6209716796875\n",
+      "1150.9459228515625\n",
+      "1152.1058349609375\n",
+      "1167.9957275390625\n",
+      "1158.261474609375\n",
+      "1154.3717041015625\n",
+      "1151.1151123046875\n",
+      "1147.6533203125\n",
+      "1147.1568603515625\n",
+      "1146.2850341796875\n",
+      "1143.3245849609375\n",
+      "1148.687744140625\n",
+      "1152.966796875\n",
+      "1143.2900390625\n",
+      "1143.849853515625\n",
+      "1142.906005859375\n",
+      "1147.2259521484375\n",
+      "1144.78564453125\n",
+      "1141.9879150390625\n",
+      "1138.1602783203125\n",
+      "1140.02392578125\n",
+      "1135.080322265625\n",
+      "1134.273193359375\n",
+      "1132.32958984375\n",
+      "1131.6307373046875\n",
+      "1134.9371337890625\n",
+      "1141.037353515625\n",
+      "1133.25\n",
+      "1135.1787109375\n",
+      "1131.5887451171875\n",
+      "1130.0777587890625\n",
+      "1132.3885498046875\n",
+      "1125.166015625\n",
+      "1129.4097900390625\n",
+      "1127.1014404296875\n",
+      "1127.785888671875\n",
+      "1125.95654296875\n",
+      "1125.18798828125\n",
+      "1120.9036865234375\n",
+      "1127.0701904296875\n",
+      "1118.3939208984375\n",
+      "1117.9132080078125\n",
+      "1119.72314453125\n",
+      "1120.1124267578125\n",
+      "1119.3597412109375\n",
+      "1122.99658203125\n",
+      "1126.7640380859375\n",
+      "1116.6331787109375\n",
+      "1114.0091552734375\n",
+      "1120.81103515625\n",
+      "1114.425537109375\n",
+      "1113.944580078125\n",
+      "1114.1986083984375\n",
+      "1112.160400390625\n",
+      "1109.0792236328125\n",
+      "1107.671875\n",
+      "1113.8492431640625\n",
+      "1109.90283203125\n",
+      "1103.935791015625\n",
+      "1111.729736328125\n",
+      "1102.5660400390625\n",
+      "1106.5987548828125\n",
+      "1106.429931640625\n",
+      "1106.801513671875\n",
+      "1105.781982421875\n",
+      "1102.2288818359375\n",
+      "1106.748291015625\n",
+      "1110.4737548828125\n",
+      "1100.29833984375\n",
+      "1095.564208984375\n",
+      "1099.562255859375\n",
+      "1104.196044921875\n",
+      "1092.7919921875\n",
+      "1097.8123779296875\n",
+      "1095.8782958984375\n",
+      "1097.9666748046875\n",
+      "1091.518798828125\n",
+      "1096.9346923828125\n",
+      "1094.15234375\n",
+      "1094.0584716796875\n",
+      "1094.490234375\n",
+      "1091.544921875\n",
+      "1085.2039794921875\n",
+      "1093.401611328125\n",
+      "1090.4090576171875\n",
+      "1089.7325439453125\n",
+      "1093.796142578125\n",
+      "1092.7490234375\n",
+      "1087.941162109375\n",
+      "1084.2615966796875\n",
+      "1082.001708984375\n",
+      "1081.7952880859375\n",
+      "1079.594482421875\n",
+      "1085.0496826171875\n",
+      "1081.53662109375\n",
+      "1082.4420166015625\n",
+      "1080.7330322265625\n",
+      "1075.452880859375\n",
+      "1081.2259521484375\n",
+      "1080.253173828125\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(250):\n",
+    "    sth = vae.forward(X)\n",
+    "    neg_elbo, llh, kld = vae.loss(X, sth)\n",
+    "    obj = neg_elbo.sum()\n",
+    "    print(float(obj[0]))\n",
+    "    optim.zero_grad()\n",
+    "    obj.backward()\n",
+    "    optim.step()"
    ]
   },
   {
@@ -514,9 +796,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "sth = vae.forward()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
