--- a/examples/VAE.ipynb
+++ b/examples/VAE.ipynb
@@ -57,12 +57,12 @@
     "# First cluster.\n",
     "mean = np.array([-3, 3]) \n",
     "cov = np.array([[.25, -1], [-1, 2.]])\n",
-    "data1 = np.random.multivariate_normal(mean, cov, size=200)\n",
+    "data1 = np.random.multivariate_normal(mean, cov, size=100)\n",
     "\n",
     "# Second cluster.\n",
     "mean = np.array([3, 2.5]) \n",
     "cov = np.array([[2, 1], [1, .75]])\n",
-    "data2 = np.random.multivariate_normal(mean, cov, size=200)\n",
+    "data2 = np.random.multivariate_normal(mean, cov, size=100)\n",
     "\n",
     "data_gmm_2 = np.vstack([data1, data2])\n",
     "\n",
@@ -130,19 +130,21 @@
    },
    "outputs": [],
    "source": [
-    "hidden_dim = 100\n",
+    "hidden_dim = 20\n",
     "\n",
     "enc_nn = torch.nn.Sequential(\n",
     "    torch.nn.Linear(observed_dim, hidden_dim),\n",
     "    torch.nn.LeakyReLU(),\n",
     ")\n",
-    "enc_proto = beer.models.MLPNormalDiag(enc_nn, latent_dim)\n",
+    "latent_dist_builder = beer.NormalDiagBuilder(latent_dim)\n",
+    "enc_proto = beer.MLPModel(enc_nn, hidden_dim, latent_dist_builder)\n",
     "\n",
     "dec_nn = torch.nn.Sequential(    \n",
     "    torch.nn.Linear(latent_dim, hidden_dim),\n",
     "    torch.nn.LeakyReLU(),\n",
     ")\n",
-    "dec_proto = beer.models.MLPNormalDiag(dec_nn, observed_dim)"
+    "obs_dist_builder = beer.NormalDiagBuilder(observed_dim)\n",
+    "dec_proto = beer.MLPModel(dec_nn, hidden_dim, obs_dist_builder)"
    ]
   },
   {
@@ -157,7 +159,7 @@
     "    prior=beer.NormalGammaPrior(torch.zeros(2), torch.ones(2), 1.),\n",
     "    posterior=beer.NormalGammaPrior(torch.zeros(2), torch.ones(2), 1.)\n",
     ")\n",
-    "vae = beer.models.VAE(copy.deepcopy(enc_proto), copy.deepcopy(dec_proto), latent_normal, nsamples=5)\n",
+    "vae = beer.VAE(copy.deepcopy(enc_proto), copy.deepcopy(dec_proto), latent_normal, nsamples=5)\n",
     "mean_elbos = []"
    ]
   },
@@ -233,6 +235,13 @@
     "\n",
     "show(fig)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -240,6 +249,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
