make MNIST work again; suffers from Bayesian oddities

--- a/examples/MNIST.ipynb
+++ b/examples/MNIST.ipynb
@@ -87,9 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "X, t = next(iter(train_loader))"
@@ -123,9 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "observed_dim = 28*28\n",
@@ -135,9 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "hidden_dim = 400\n",
@@ -146,29 +140,30 @@
     "    torch.nn.Linear(observed_dim, hidden_dim),\n",
     "    torch.nn.Tanh(),\n",
     ")\n",
-    "enc_proto = beer.models.MLPNormalDiag(enc_nn, latent_dim)\n",
+    "latent_dist_builder = beer.NormalDiagBuilder(latent_dim)\n",
+    "enc_proto = beer.MLPModel(enc_nn, hidden_dim, latent_dist_builder)\n",
     "\n",
     "dec_nn = torch.nn.Sequential(    \n",
     "    torch.nn.Linear(latent_dim, hidden_dim),\n",
     "    torch.nn.Tanh(),\n",
     ")\n",
-    "dec_proto = beer.models.MLPBernoulli(dec_nn, observed_dim)"
+    "obs_dist_builder = beer.BernoulliBuilder(observed_dim)\n",
+    "dec_proto = beer.MLPModel(dec_nn, hidden_dim, obs_dist_builder)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import copy\n",
-    "latent_normal = beer.models.FixedIsotropicGaussian(latent_dim)\n",
+    "latent_normal = beer.NormalDiagonalCovariance(\n",
+    "    prior=beer.NormalWishartPrior(torch.zeros(latent_dim), torch.eye(latent_dim), 1.),\n",
+    "    posterior=beer.NormalWishartPrior(torch.zeros(latent_dim), torch.eye(latent_dim), 1.)\n",
+    ")\n",
     "vae = beer.models.VAE(copy.deepcopy(enc_proto), copy.deepcopy(dec_proto), latent_normal, nsamples=5)\n",
-    "mean_elbos = []\n",
-    "mean_klds = []\n",
-    "mean_llhs = []"
+    "mean_elbos = []"
    ]
   },
   {
@@ -181,26 +176,21 @@
     "    for i in range(nb_epochs):\n",
     "        for X, _ in train_loader:\n",
     "            X = torch.autograd.Variable(X.view(-1, 28**2))\n",
-    "            sth = vae.forward(X)\n",
-    "            neg_elbo, llh, kld = vae.loss(X, sth)\n",
-    "            obj = neg_elbo.mean()\n",
+    "            elbo = vae.forward(X)\n",
+    "            obj = -elbo.mean()\n",
     "            mean_elbos.append(-obj.item())\n",
-    "            mean_klds.append(kld.mean().item())\n",
-    "            mean_llhs.append(llh.mean().item())\n",
     "            optim.zero_grad()\n",
     "            obj.backward()\n",
     "            optim.step()\n",
     "        print(\"epoch {} done, last ELBO: {}\".format(i, mean_elbos[-1]))\n",
     "\n",
     "# a reasonable training procedure\n",
-    "optim = torch.optim.Adam(vae.parameters(), lr=1e-3)\n",
-    "train(6)\n",
+    "optim = torch.optim.Adam(list(vae.encoder.parameters()) + list(vae.decoder.parameters()), lr=1e-3)\n",
+    "train(3)\n",
     "\n",
     "fig = figure(title='ELBO', width=400, height=400, x_axis_label='step',\n",
     "              y_axis_label='ln p(X)')\n",
     "fig.line(np.arange(len(mean_elbos)), mean_elbos, legend='ELBO', color='blue')\n",
-    "fig.line(np.arange(len(mean_klds)), mean_klds, legend='KLD', color='red')\n",
-    "fig.line(np.arange(len(mean_llhs)), mean_llhs, legend='LLH', color='black')\n",
     "fig.legend.location = 'bottom_right'\n",
     "\n",
     "show(fig)"
@@ -215,8 +205,8 @@
     "sqrt_nb = 20 # how many samples per axis\n",
     "\n",
     "# what range to cover. Note that it is a half range (2 <=> -2 -- +2).\n",
-    "# Consult output of the next cell for optimal valuer\n",
-    "latent_range = 3\n",
+    "# Consult output of the next cell for optimal value\n",
+    "latent_range = 4\n",
     "\n",
     "latent_step = 2*latent_range / (sqrt_nb-1) # -1 so that we can place the end ones on the ends\n",
     "latent_positions = [-latent_range + i*latent_step for i in range(sqrt_nb)]\n",
@@ -261,16 +251,14 @@
     "for i in range(10): # plot each digit seperately\n",
     "    mask = (ts == i).nonzero().view(-1)\n",
     "    selection = latent_images[mask]\n",
-    "    fig.circle(selection[:,0].numpy(), selection[:,1].numpy(), color=colors[i], size=0.2)\n",
+    "    fig.circle(selection[:,0].numpy(), selection[:,1].numpy(), color=colors[i], size=0.4)\n",
     "show(fig)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -291,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
