add FixedIsotropicGaussian for MNIST recipe

--- a/examples/MNIST.ipynb
+++ b/examples/MNIST.ipynb
@@ -69,7 +69,7 @@
     "train_set = torchvision.datasets.MNIST(root=root, train=True, transform=trans, download=download)\n",
     "test_set = torchvision.datasets.MNIST(root=root, train=False, transform=trans)\n",
     "\n",
-    "batch_size = 100\n",
+    "batch_size = 256\n",
     "\n",
     "train_loader = torch.utils.data.DataLoader(\n",
     "                 dataset=train_set,\n",
@@ -158,11 +158,8 @@
    "outputs": [],
    "source": [
     "import copy\n",
-    "latent_normal = beer.NormalDiagonalCovariance(\n",
-    "    prior=beer.NormalWishartPrior(torch.zeros(latent_dim), torch.eye(latent_dim), 1.),\n",
-    "    posterior=beer.NormalWishartPrior(torch.zeros(latent_dim), torch.eye(latent_dim), 1.)\n",
-    ")\n",
-    "vae = beer.models.VAE(copy.deepcopy(enc_proto), copy.deepcopy(dec_proto), latent_normal, nsamples=5)\n",
+    "latent_normal = beer.FixedIsotropicGaussian(latent_dim)\n",
+    "vae = beer.models.VAE(copy.deepcopy(enc_proto), copy.deepcopy(dec_proto), latent_normal, nsamples=1)\n",
     "mean_elbos = []"
    ]
   },
@@ -239,8 +236,10 @@
     "    latent_images.append(vae.encoder(X).mean)\n",
     "    ts.append(t)\n",
     "    \n",
+    "    \n",
     "latent_images = torch.cat(latent_images).data\n",
     "ts = torch.cat(ts).data\n",
+    "print(latent_images.mean(dim=0))\n",
     "\n",
     "#           0      1       2          3        4       5        6         7        8         9\n",
     "colors = ['red', 'blue', 'green', 'purple', 'black', 'cyan', 'yellow', 'brown', 'violet', 'olive']\n",
