remove the FixedGaussian

--- a/examples/MNIST.ipynb
+++ b/examples/MNIST.ipynb
@@ -158,7 +158,10 @@
    "outputs": [],
    "source": [
     "import copy\n",
-    "latent_normal = beer.FixedIsotropicGaussian(latent_dim)\n",
+    "latent_normal = beer.NormalDiagonalCovariance(\n",
+    "    prior=beer.NormalGammaPrior(torch.zeros(latent_dim), torch.ones(latent_dim), 1.),\n",
+    "    posterior=beer.NormalGammaPrior(torch.zeros(latent_dim), torch.ones(latent_dim), 1.)\n",
+    ")\n",
     "vae = beer.models.VAE(copy.deepcopy(enc_proto), copy.deepcopy(dec_proto), latent_normal, nsamples=1)\n",
     "mean_elbos = []"
    ]
@@ -199,7 +202,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sqrt_nb = 20 # how many samples per axis\n",
+    "sqrt_nb = 15 # how many samples per axis\n",
     "\n",
     "# what range to cover. Note that it is a half range (2 <=> -2 -- +2).\n",
     "# Consult output of the next cell for optimal value\n",
