kill the MLPModel class

--- a/examples/MNIST.ipynb
+++ b/examples/MNIST.ipynb
@@ -24,6 +24,8 @@
     "import beer\n",
     "import numpy as np\n",
     "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
     "\n",
     "import torchvision\n",
     "import torchvision.transforms as transforms\n",
@@ -134,21 +136,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hidden_dim = 400\n",
+    "class Encoder(nn.Module):\n",
+    "    def __init__(self, hidden_dim):\n",
+    "        super().__init__()\n",
+    "        self.nn = torch.nn.Sequential(\n",
+    "            torch.nn.Linear(observed_dim, hidden_dim),\n",
+    "            torch.nn.Tanh(),\n",
+    "        )\n",
+    "        self.h2mean = nn.Linear(hidden_dim, latent_dim)\n",
+    "        self.h2logvar = nn.Linear(hidden_dim, latent_dim)\n",
+    "        \n",
+    "    def forward(self, X):\n",
+    "        h = self.nn(X)\n",
+    "        mean = self.h2mean(h)\n",
+    "        logvar = self.h2logvar(h)\n",
+    "        return beer.NormalDiagonalCovariance_MLP(mean, logvar.exp())\n",
     "\n",
-    "enc_nn = torch.nn.Sequential(\n",
-    "    torch.nn.Linear(observed_dim, hidden_dim),\n",
-    "    torch.nn.Tanh(),\n",
-    ")\n",
-    "latent_dist_builder = beer.NormalDiagBuilder(latent_dim)\n",
-    "enc_proto = beer.MLPModel(enc_nn, hidden_dim, latent_dist_builder)\n",
-    "\n",
-    "dec_nn = torch.nn.Sequential(    \n",
-    "    torch.nn.Linear(latent_dim, hidden_dim),\n",
-    "    torch.nn.Tanh(),\n",
-    ")\n",
-    "obs_dist_builder = beer.BernoulliBuilder(observed_dim)\n",
-    "dec_proto = beer.MLPModel(dec_nn, hidden_dim, obs_dist_builder)"
+    "class Decoder(nn.Module):\n",
+    "    def __init__(self, hidden_dim):\n",
+    "        super().__init__()\n",
+    "        self.nn = torch.nn.Sequential(\n",
+    "            torch.nn.Linear(latent_dim, hidden_dim),\n",
+    "            torch.nn.Tanh(),\n",
+    "        )\n",
+    "        self.h2mu = nn.Linear(hidden_dim, observed_dim)\n",
+    "        \n",
+    "    def forward(self, X):\n",
+    "        h = self.nn(X)\n",
+    "        logit = self.h2mu(h)\n",
+    "        return beer.Bernoulli_MLP(F.sigmoid(logit))"
    ]
   },
   {
@@ -157,12 +173,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import copy\n",
+    "hidden_dim = 400\n",
+    "\n",
     "latent_normal = beer.NormalDiagonalCovariance(\n",
     "    prior=beer.NormalGammaPrior(torch.zeros(latent_dim), torch.ones(latent_dim), 1.),\n",
     "    posterior=beer.NormalGammaPrior(torch.zeros(latent_dim), torch.ones(latent_dim), 1.)\n",
     ")\n",
-    "vae = beer.models.VAE(copy.deepcopy(enc_proto), copy.deepcopy(dec_proto), latent_normal, nsamples=1)\n",
+    "vae = beer.VAE(Encoder(hidden_dim), Decoder(hidden_dim), latent_normal, nsamples=1)\n",
     "mean_elbos = []"
    ]
   },
@@ -186,7 +203,7 @@
     "\n",
     "# a reasonable training procedure\n",
     "optim = torch.optim.Adam(list(vae.encoder.parameters()) + list(vae.decoder.parameters()), lr=1e-3)\n",
-    "train(3)\n",
+    "train(6)\n",
     "\n",
     "fig = figure(title='ELBO', width=400, height=400, x_axis_label='step',\n",
     "              y_axis_label='ln p(X)')\n",
