--- a/examples/VAE-GLC.ipynb
+++ b/examples/VAE-GLC.ipynb
@@ -122,13 +122,20 @@
     "# Number of units per hidden-layer.\n",
     "n_units = 20\n",
     "\n",
-    "class ResidualWrapper(nn.Module):\n",
-    "    def __init__(self, inner_model):\n",
+    "class EncDec(nn.Module):\n",
+    "    def __init__(self, structure):\n",
     "        super().__init__()\n",
-    "        self.inner_model = inner_model\n",
+    "        self.nn = structure\n",
+    "        self.h2mean = nn.Linear(n_units, latent_dim)\n",
+    "        self.h2logvar = nn.Linear(n_units, latent_dim)\n",
+    "    \n",
+    "        self.h2logvar.bias.data += -1.0 # init with small (log)variance\n",
     "            \n",
     "    def forward(self, X):\n",
-    "        return torch.cat([self.inner_model(X), X], dim=-1)\n",
+    "        h = self.nn(X)\n",
+    "        mean = self.h2mean(h)\n",
+    "        logvar = self.h2logvar(h)\n",
+    "        return beer.NormalDiagonalCovariance_MLP(mean + X, logvar.exp())\n",
     "\n",
     "# Neural network structure of the encoder/decoder of the model.\n",
     "enc_struct = nn.Sequential(\n",
@@ -137,9 +144,6 @@
     "    nn.Linear(n_units, n_units),\n",
     "    nn.Tanh(),\n",
     ")\n",
-    "latent_dist_builder = beer.NormalDiagBuilder(latent_dim)\n",
-    "encoder = beer.MLPModel(ResidualWrapper(enc_struct), obs_dim + n_units, latent_dist_builder)\n",
-    "encoder.output_layer[1].bias.data += -1.0 # init with small (log)variance\n",
     "\n",
     "dec_struct = nn.Sequential(\n",
     "    nn.Linear(obs_dim, n_units),\n",
@@ -149,9 +153,6 @@
     "    nn.Tanh(),\n",
     "    nn.Dropout(p=0.01)\n",
     ")\n",
-    "observed_dist_builder = beer.NormalDiagBuilder(obs_dim)\n",
-    "decoder = beer.MLPModel(ResidualWrapper(dec_struct), latent_dim + n_units, observed_dist_builder)\n",
-    "decoder.output_layer[1].bias.data += -1.0 # init with small (log)variance\n",
     "\n",
     "# Model of the latent space.\n",
     "# We use Mixture of normal with diagonal cov. It can be changed\n",
@@ -183,7 +184,7 @@
     "# ----------------------------------------------------------------------\n",
     "\n",
     "# Putting everything together to build the SVAE.\n",
-    "model = beer.VAE(encoder, decoder, latent_model, nsamples=15)\n",
+    "model = beer.VAE(EncDec(enc_struct), EncDec(dec_struct), latent_model, nsamples=15)\n",
     "elbos = []\n"
    ]
   },
@@ -285,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
